--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
         <header>
             <h1>Titulo do Site</h1>
         </header>            
-            <article>
-                <h2>Artigo 001</h2>
-                <p>Texto Artigo 001</p>
-            </article>
-            <article>
-                <h2>Artigo 002</h2>
-                <p>Texto Artigo 002</p>
-            </article>
+        <article>
+            <h2>Curso de HTML 5 com CSS3</h2>
+             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus dignissimos numquam, error nostrum voluptates dolorum accusamus odit voluptatum. Qui, obcaecati quod. Ratione, voluptates dolor sed atque provident quaerat aut temporibus?</p>
+        </article>
+        <article>
+            <h2>Curso de Javascript</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, suscipit? Assumenda dolores sunt placeat corporis, est officia esse fugiat exercitationem cupiditate enim nobis consectetur magnam atque sapiente rerum! Fugiat, reiciendis.</p>
+        </article>
     </main>
 </body>
 </html>
