--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Título do Site</title>
+    <title>Site CursoVideo</title>
 </head>
 <body>
     <main>
         <header>
-            <h1>Titulo do Site</h1>
+            <h1>Curso Grátis</h1>
         </header>            
         <article>
             <h2>Curso de HTML 5 com CSS3</h2>
