--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <main>
         <header>
-            <h1>Curso Grátis</h1>
+            <h1>Cursos Grátis</h1>
         </header>            
         <article>
             <h2>Curso de HTML 5 com CSS3</h2>
