--- a/curso-html.html
+++ b/curso-html.html
@@ -2,28 +2,27 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cursos em Vídeo</title>
+    <title>Curso de HTML</title>
     <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
     <main>
         <header>
-            <h1>Cursos Grátis</h1>
-            <img src="imagens/curso-em-video-cor.png" alt="Curso em Vídeo">
-        </header>            
+            <h1>Curso de HTML5 e CSS3</h1>
+        </header>
         <article>
             <h2>Curso de HTML 5 com CSS3</h2>
             <img class="lado" src="imagens/curso-html-css.png" alt="Curso de HTML">
              <p>A <abbr tittle="HyperText Markup Language">HTML</abbr> é uma linguagem de marcação para a criação de sites. Atualmente na versão 5, ela usa a semântica dos elementos para criar o conteúdo de uma página Web. Com as <abbr title="Cascading Style Sheets">CSS</abbr>, criamos as configurações visuais que um site vai ter.</p>
              <p><a href="">Acesse o Curso de HTML5</a></p>
+
+
+             <iframe width="560" height="315" src="https://www.youtube.com/embed/riSVzwlSnhw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+            <a href="index.html"><img src="imagens/btn-back.png" alt=" Voltar"></a>
+
         </article>
-        <article>
-            <h2>Curso de Javascript</h2>
-            <img class="lado" src="imagens/curso-javascript.png" alt="Curso de JavaScript">
-            <p><abbr title="JavaScript">JavaScript</abbr> é uma linguagem de script criada para aumentar a interatividade entre um site e seus visitantes. Os códigos em JS são excutados dentro do navegador de dão acesso aos elementos HTML por meio do <abbr title="Document Object Model">DOM</abbr>.</p>
-            <p><a href="">Acesse o Curso de JavaScript</a></p>
     </main>
 </body>
 </html>
